Fix production light/dark mode button position

--- a/docusaurus/src/scss/navbar.scss
+++ b/docusaurus/src/scss/navbar.scss
@@ -297,7 +297,8 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
     }
 
     button[class*="toggleButton"] {
-      right: 0;
+      right: 50px;
+      top: 12px;
       border: none;
     }
 
